[package]
name = "wren-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wren"

[dependencies]
anyhow = "1.0"
itertools = "0.11"
log = "0.4"
serde = { version = "1.0", optional = true }

[features]
default = []

serde = ["dep:serde"]
