[package]
name = "wren-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wren"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
wren-rs = { path = "..", version = "*" }
